# testLibtorch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp  gradComputation.cpp  paillier.cpp  paillier.h  parameters.txt  some codes.cpp  some problems.txt  trainLog.txt  util.h
include/: modelCreation.h  readMnist.h  util.h
src/: gradComputation.cpp  paillier.cpp  readMnist.cpp
